[gd_scene load_steps=56 format=3 uid="uid://bnnxlc5ghyy1a"]

[ext_resource type="Script" uid="uid://c382xmsi6nkk1" path="res://scripts/testplayerscript.gd" id="1_xl561"]
[ext_resource type="Texture2D" uid="uid://d10ltoi01rv00" path="res://assets/character/axe.png" id="2_xvuth"]
[ext_resource type="Texture2D" uid="uid://d0d8h6ug0fnej" path="res://assets/character/idle.png" id="3_uq8ot"]
[ext_resource type="Texture2D" uid="uid://753ik372kbb0" path="res://assets/character/walk.png" id="4_c7c50"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dg40j"]
atlas = ExtResource("2_xvuth")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xgtv"]
atlas = ExtResource("2_xvuth")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rclf"]
atlas = ExtResource("2_xvuth")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0anf"]
atlas = ExtResource("2_xvuth")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1x7u"]
atlas = ExtResource("2_xvuth")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3kfx"]
atlas = ExtResource("2_xvuth")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdner"]
atlas = ExtResource("2_xvuth")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m38kj"]
atlas = ExtResource("2_xvuth")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1y1o"]
atlas = ExtResource("2_xvuth")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnvwh"]
atlas = ExtResource("2_xvuth")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfou0"]
atlas = ExtResource("2_xvuth")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vkt2s"]
atlas = ExtResource("2_xvuth")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ux5t"]
atlas = ExtResource("2_xvuth")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvr6b"]
atlas = ExtResource("2_xvuth")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nktl3"]
atlas = ExtResource("2_xvuth")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yyjep"]
atlas = ExtResource("2_xvuth")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6aj6e"]
atlas = ExtResource("2_xvuth")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7k00"]
atlas = ExtResource("2_xvuth")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_76oj4"]
atlas = ExtResource("3_uq8ot")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyp2m"]
atlas = ExtResource("3_uq8ot")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_atpat"]
atlas = ExtResource("3_uq8ot")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqtwu"]
atlas = ExtResource("3_uq8ot")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6eyoc"]
atlas = ExtResource("3_uq8ot")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eojnx"]
atlas = ExtResource("3_uq8ot")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgnko"]
atlas = ExtResource("3_uq8ot")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vyk4"]
atlas = ExtResource("3_uq8ot")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2l4js"]
atlas = ExtResource("3_uq8ot")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jk2m4"]
atlas = ExtResource("3_uq8ot")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhtjm"]
atlas = ExtResource("3_uq8ot")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4v7y"]
atlas = ExtResource("3_uq8ot")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrqxk"]
atlas = ExtResource("4_c7c50")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g66nw"]
atlas = ExtResource("4_c7c50")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpnd8"]
atlas = ExtResource("4_c7c50")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6tgn"]
atlas = ExtResource("4_c7c50")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wg1y"]
atlas = ExtResource("4_c7c50")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmyvj"]
atlas = ExtResource("4_c7c50")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2luo"]
atlas = ExtResource("4_c7c50")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eir2k"]
atlas = ExtResource("4_c7c50")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_inhyd"]
atlas = ExtResource("4_c7c50")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqk1x"]
atlas = ExtResource("4_c7c50")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dm10o"]
atlas = ExtResource("4_c7c50")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6auj"]
atlas = ExtResource("4_c7c50")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8g38"]
atlas = ExtResource("4_c7c50")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tswxa"]
atlas = ExtResource("4_c7c50")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqa0x"]
atlas = ExtResource("4_c7c50")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhyq5"]
atlas = ExtResource("4_c7c50")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5jukt"]
atlas = ExtResource("4_c7c50")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwwfy"]
atlas = ExtResource("4_c7c50")
region = Rect2(160, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_dg40j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dg40j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xgtv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rclf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0anf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1x7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3kfx")
}],
"loop": false,
"name": &"chop_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdner")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m38kj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1y1o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnvwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfou0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vkt2s")
}],
"loop": false,
"name": &"chop_right",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ux5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvr6b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nktl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yyjep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6aj6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7k00")
}],
"loop": false,
"name": &"chop_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_76oj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyp2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_atpat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqtwu")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6eyoc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eojnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgnko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vyk4")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2l4js")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jk2m4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhtjm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4v7y")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrqxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g66nw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpnd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6tgn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wg1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmyvj")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2luo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eir2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_inhyd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqk1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dm10o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6auj")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8g38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tswxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqa0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhyq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5jukt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwwfy")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x34og"]
size = Vector2(5, 5)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4r5pv"]
radius = 6.0
height = 12.0

[node name="Player" type="CharacterBody2D"]
y_sort_enabled = true
script = ExtResource("1_xl561")

[node name="flip" type="Node2D" parent="."]

[node name="PlayerSprite" type="AnimatedSprite2D" parent="flip"]
position = Vector2(0, -10)
sprite_frames = SubResource("SpriteFrames_dg40j")
animation = &"chop_right"
autoplay = "idle_down"

[node name="damageBox" type="Area2D" parent="flip"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="flip/damageBox"]
position = Vector2(11, -7)
shape = SubResource("RectangleShape2D_x34og")

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CapsuleShape2D_4r5pv")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)
limit_left = -303
limit_top = -205
limit_right = 286
limit_bottom = 255
drag_horizontal_enabled = true
drag_vertical_enabled = true

[connection signal="animation_finished" from="flip/PlayerSprite" to="." method="_on_player_sprite_animation_finished"]
[connection signal="frame_changed" from="flip/PlayerSprite" to="." method="_on_player_sprite_frame_changed"]
